--- a/one/AUTHORS
+++ b/one/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
-Mahmoud Nasser <mahmoudnasser1561@gmail.com>
+Ehoneah Obed <ehoneahobed@hotmail.com>
+Anthony Ekim <otoobongekim@gmail.com>
